<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="140dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/iconItemCardView"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:layout_marginStart="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iconItem"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:scaleType="centerCrop"
            android:src="@drawable/sample1"
            android:contentDescription="@string/itemimage" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="@id/iconItemCardView"
        app:layout_constraintStart_toEndOf="@id/iconItemCardView">
        <TextView
            android:id="@+id/tv_itemTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:maxLines="2"
            android:textSize="@dimen/list_item_text_name"
            android:text="@string/itemname"
            />
        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/txt_sub"
            android:textSize="@dimen/list_item_text_address"
            android:text="@string/address" />
        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/txt_sub"
            android:textStyle="bold"
            android:textSize="@dimen/list_item_text_price"
            android:text="@string/price" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:scaleType="fitXY"
            android:src="@drawable/message"
            android:contentDescription="@string/chat" />

        <TextView
            android:id="@+id/tv_chatCnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:text="@string/count"
            android:textColor="@color/txt_sub"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/iv_like"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginStart="8dp"
            android:scaleType="fitXY"
            android:src="@drawable/like"
            android:contentDescription="@string/like_count" />

        <TextView
            android:id="@+id/tv_likecnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:text="@string/like_count"
            android:textColor="@color/txt_sub"
            android:textSize="15sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grayLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>